# filipejr-homepage

./: .gitignore  .prettierrc  Cargo.toml  README.md  compile_css.sh  deploy.sh  index.html  zbuild.zb
.cargo/: config.toml
backend/: Cargo.toml
backend/debian/: service
backend/src/: main.rs
css/: sidebar.scss
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/css/: colors.scss  sidebar.scss
frontend/pages/: home.html
frontend/src/: main.rs
homepage/: Cargo.toml
homepage-backend/: Cargo.toml  config.toml
homepage-backend/debian/: postinst
homepage-backend/src/: main.rs
homepage-frontend/: Cargo.toml  Trunk.toml  build-css.sh  compile_css.sh  index.html  optimize-wasm.sh
homepage-frontend/css/: a.css  about-me.css  about-me.scss  app.css  app.scss  colors.css  cv.scss  default.css  default.scss  main.css  main.scss  projects.scss  sidebar.css
homepage-frontend/css/pages/: cv.css  projects.css
homepage-frontend/html/components/: sidebar.html
homepage-frontend/html/pages/: about-me.html
homepage-frontend/html/pages/cv/: pdf.html
homepage-frontend/html/pages/projects/: project.html
homepage-frontend/pages/: about-me.html  cv.html  projects.html
homepage-frontend/src/: components.rs  main.rs  pages.rs  util.rs
homepage-frontend/src/components/: sidebar.rs
homepage-frontend/src/pages/: about_me.rs  cv.rs  home.rs  not_found.rs  projects.rs
homepage/src/: lib.rs
pages/: about-me.html  home.html
scripts/: deploy-backend.sh  deploy-frontend.sh  deploy.sh  run-backend.sh  run-frontend.sh  run.sh
src/: main.rs
zbuild/: backend.zb  frontend.zb  remote.zb
