[workspace]

members  = ["homepage", "homepage-backend", "homepage-frontend"]
resolver = "2"

[workspace.package]
authors      = ["Filipe Rodrigues <filipejacintorodrigues1@gmail.com>"]
license-file = "LICENSE-MIT"

[workspace.dependencies]

# Workspace
homepage          = { path = "homepage" }
homepage-backend  = { path = "homepage-backend" }
homepage-frontend = { path = "homepage-frontend" }

app-error                = "0.1.0"
axum                     = "0.8.8"
console_error_panic_hook = "0.1.7"
derive_more              = "2.1.1"
dynatos-builder          = { git = "https://github.com/Zenithsiz/dynatos", rev = "60862eac513dfcc7b9208299279a4e1fff55b510" }
dynatos-context          = { git = "https://github.com/Zenithsiz/dynatos", rev = "60862eac513dfcc7b9208299279a4e1fff55b510" }
dynatos-html             = { git = "https://github.com/Zenithsiz/dynatos", rev = "60862eac513dfcc7b9208299279a4e1fff55b510" }
dynatos-html-reactive    = { git = "https://github.com/Zenithsiz/dynatos", rev = "60862eac513dfcc7b9208299279a4e1fff55b510" }
dynatos-loadable         = { git = "https://github.com/Zenithsiz/dynatos", rev = "60862eac513dfcc7b9208299279a4e1fff55b510" }
dynatos-reactive         = { git = "https://github.com/Zenithsiz/dynatos", rev = "60862eac513dfcc7b9208299279a4e1fff55b510" }
dynatos-router           = { git = "https://github.com/Zenithsiz/dynatos", rev = "60862eac513dfcc7b9208299279a4e1fff55b510" }
dynatos-title            = { git = "https://github.com/Zenithsiz/dynatos", rev = "60862eac513dfcc7b9208299279a4e1fff55b510" }
dynatos-util             = { git = "https://github.com/Zenithsiz/dynatos", rev = "60862eac513dfcc7b9208299279a4e1fff55b510" }
extend                   = "1.2.0"
reqwest                  = "0.13.2"
serde                    = "1.0.228"
strum                    = "0.28.0"
tokio                    = "1.50.0"
toml                     = "1.0.6"
tracing                  = "0.1.44"
tracing-subscriber       = "0.3.22"
tracing-web              = "0.1.3"
url                      = "2.5.8"
wasm-bindgen             = "0.2.114"
web-sys                  = "0.3.91"
zutil-cloned             = "0.1.0"
