[package]
name = "homepage-backend"
version = "0.1.0"
edition = "2021"
authors = { workspace = true }
description = "Homepage backend"
license-file = { workspace = true }

[package.metadata.deb]
maintainer-scripts = "debian/"
systemd-units = { enable = false }
depends = []

[dependencies]

# Workspace
homepage = { workspace = true }

axum = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
url = { workspace = true }
zutil-app-error = { workspace = true }
