[package]
name = "homepage-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]

# Workspace
homepage = { workspace = true }

console_error_panic_hook = { workspace = true }
derive_more = { workspace = true, features = ["full"] }
dynatos = { workspace = true }
dynatos-builder = { workspace = true }
dynatos-context = { workspace = true }
dynatos-html = { workspace = true }
dynatos-loadable = { workspace = true }
dynatos-reactive = { workspace = true }
dynatos-router = { workspace = true }
dynatos-title = { workspace = true }
dynatos-util = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
tracing = { workspace = true, features = [
	"max_level_trace",
	"release_max_level_info",
] }
tracing-subscriber = { workspace = true }
tracing-web = { workspace = true }
url = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true }
zutil-app-error = { workspace = true }
