[package]
name    = "homepage-frontend"
version = "0.1.0"
edition = "2024"

[dependencies]

# Workspace
homepage = { workspace = true }

app-error                = { workspace = true }
console_error_panic_hook = { workspace = true }
derive_more              = { features = ["full"], workspace = true }
dynatos-builder          = { workspace = true }
dynatos-context          = { workspace = true }
dynatos-html             = { workspace = true }
dynatos-html-reactive    = { workspace = true }
dynatos-loadable         = { workspace = true }
dynatos-reactive         = { workspace = true }
dynatos-router           = { workspace = true }
dynatos-title            = { workspace = true }
dynatos-util             = { workspace = true }
extend                   = { workspace = true }
reqwest                  = { features = ["json"], workspace = true }
strum                    = { features = ["derive"], workspace = true }
tracing                  = { features = ["max_level_trace", "release_max_level_info"], workspace = true }
tracing-subscriber       = { workspace = true }
tracing-web              = { workspace = true }
url                      = { workspace = true }
wasm-bindgen             = { workspace = true }
web-sys                  = { workspace = true }
zutil-cloned             = { workspace = true }
